fix: removed image issue and align height accordingly

--- a/client/src/pages/SearchPage/SearchPage.css
+++ b/client/src/pages/SearchPage/SearchPage.css
@@ -50,7 +50,7 @@ ion-grid {
 
 /* product image on search page card */
 .productImage {
-    height: auto;
+    height: 200px;
     object-fit: cover;
     border-bottom: 1px solid #e0e0e0;
     margin-left: auto;
